--- a/carshare/src/pages/home/home.css
+++ b/carshare/src/pages/home/home.css
@@ -19,7 +19,9 @@
 }
 
 .conteudo{
-  display: flex;
+  display: grid;
+  padding-left: 50px;
+  grid-template-columns: 1fr 1fr;
   flex-wrap: wrap;
   justify-content: center;
   color: white;
@@ -51,15 +53,20 @@
 
 .car{
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-top: 30px;
+  flex-direction: column;
   margin: 0 20px;
   margin-top: 30px;
   color: #000;
-  width: 40%;
-  height: 320px;
+  width: 70%;
+  height: 80%;
   padding: 30px;
   background-color: #D9D9D9;
   border-radius: 10px;
 }
 .car img{
-  width: 80%;
+  width: 100%;
 }
